# minife

./: .gitignore  AUTHORS  BUILD  Makefile.am  NEWS  README  bootstrap.sh  configure.ac
psp/: Makefile.PSP  Makefile.PSP.EBOOT  guichan-0.8.1_configure.in.patch
src/: Makefile.am  Makefile.in  README  main.cpp  microfe.c
src/klauncher/: klauncher.c
src/microfe/: microfe.c
